HTML file update
This update adds new HTML file with demo version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/css/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title></title>
 </head>
+
+<body>
+    <header>
+        <div class="header" id="header">
+            <h1>Weather comparison Mars-Earth</h1>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="container" id="container">
+                <article>
+                    <figure>
+                        <div class="MarsContainer" id="MarsContainer">
+                            <h2>Mars Weather</h2>
+                            <p>Date</p>
+                            <p>Elysium Planitia</p>
+                            <div class="MarsCard" id="MarsCard">
+                                <p>Weather Info</p>
+                            </div>
+                        </div>
+                    </figure>
+                </article>
+                <article>
+                    <figure>
+                        <div class="EarthContainer" id="EarthContainer">
+                            <h2>Earth</h2>
+                            <p>City</p>
+                            <p>Date</p>
+                            <div class="EarthCard" id="EarthCard">
+                                <p>Weather Info</p>
+                            </div>
+
+                        </div>
+                    </figure>
+                </article>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer" id="footer">
+            <h3>Thank you!</h3>
+        </div>
+    </footer>
+</body>
+
+</html>
