Javascript to manage retrieval of photos from the Google Maps Places API.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                             <div class="NorthCard" id="NorthCard">
                                 <p>Weather Info</p>
                             </div>
-                            <div class="NorthCard" id="NorthCard">
-                                <p>Photo</p>
+                            <div class="NorthCard" id="NorthCardPhoto">
+                                
                             </div>
 
                         </div>
