With the textboxes and search buttons added, used the id's from those elements and tied all elements to the Javascript functions.

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </header>
     <main>
         <section>
-            <div class="container" id="container">
+            <div class="main-container" id="container">
                 <article>
                     <figure>
                         <div class="NorthContainer" id="NorthContainer">
                             <h2>City No. 1</h2>
                             <p>Where...</p>
-                            <label for="city-search">City:</label>
-                            <input type="search" id="city-search" name="q" />
-                            <button>Search</button>
+                            <label for="city-search-north">City:</label>
+                            <input type="search" id="city-search-north" name="north" />
+                            <button id="northBtn" type="submit">Search</button>
                             <div class="NorthCard" id="NorthCard">
                                 <p>Weather Info</p>
                             </div>
@@ -42,14 +42,14 @@
                         <div class="SouthContainer" id="SouthContainer">
                             <h2>City No. 2</h2>
                             <p>Where...</p>
-                            <label for="city-search">City:</label>
-                            <input type="search" id="city-search" name="q" />
-                            <button>Search</button>
+                            <label for="city-search-south">City:</label>
+                            <input type="search" id="city-search-south" name="sourth" />
+                            <button id="southBtn" type="submit">Search</button>
                             <div class="SouthCard" id="SouthCard">
                                 <p>Weather Info</p>
                             </div>
-                            <div class="SouthCard" id="SouthCard">
-                                <p>Photo</p>
+                            <div class="SouthCard" id="SouthCardPhoto">
+                                
                             </div>
                         </div>
                     </figure>
@@ -69,7 +69,7 @@
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"></script>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
