fetch weather API, parse response and dynamically add HTML element to the page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./style.css">
     <title></title>
 </head>
@@ -25,7 +26,7 @@
                             <h2>City No. 1</h2>
                             <p>Where...</p>
                             <label for="city-search">City:</label>
-                            <input type="search" id="city-search" name="q" />
+                            <input type="search" id="searchBtn" name="q" />
                             <button>Search</button>
                             <div class="NorthCard" id="NorthCard">
                                 <p>Weather Info</p>
