adding placeholder and demo weather card, functioning search button to display weather of user input city

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                         <div class="NorthContainer" id="NorthContainer">
                             <h2>City No. 1</h2>
                             <p>Where...</p>
-                            <label for="city-search">City:</label>
-                            <input type="search" id="searchBtn" name="q" />
-                            <button>Search</button>
+                            <label for="cityInput">City:</label>
+                            <input type="text" id="cityInput" placeholder="Fredericton" name="q" />
+                            <button id="searchBtn">Search</button>
                             <div class="NorthCard" id="NorthCard">
                                 <p>Weather Info</p>
                             </div>
