fixed semantic html

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
     <main>
         <section>
             <div class="main-container" id="container">
-                <article>
-                    <figure>
-                        <div class="NorthContainer" id="NorthContainer">
+                        <div class="bg-slate-500 rounded-md text-center" id="NorthContainer">
                             <h2>Location 1</h2>
                             <label class="sr-only" for="cityInput">City:</label>
                             <input class="italic justify-self-center px-8 rounded-md border-solid border-slate-500 border-2 font-mono" type="text" id="cityInput" placeholder="Type your City here!" name="q" value="Fredericton"/>
@@ -56,10 +54,7 @@
                             </div>
 
                         </div>
-                    </figure>
-                </article>
-                <article>
-                    <figure>
+                    
                         <div class="SouthContainer" id="SouthContainer">
                             <h2>Location 2</h2>
                             <label class="sr-only" for="city-search-south">City:</label>
@@ -72,8 +67,6 @@
                                 
                             </div>
                         </div>
-                    </figure>
-                </article>
             </div>
         </section>
     </main>
