adjust styling / add copyright

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     <main>
         <section>
             <div class="main-container" id="container">
-                        <div class="bg-slate-500 rounded-md text-center" id="NorthContainer">
-                            <h2>Location 1</h2>
+                        <div class="p-4 bg-slate-500/75 rounded-md text-center" id="NorthContainer">
+                            <h2 class="mb-4 text-2xl font-bold">Location 1</h2>
                             <label class="sr-only" for="cityInput">City:</label>
                             <input class="italic justify-self-center px-8 rounded-md border-solid border-slate-500 border-2 font-mono" type="text" id="cityInput" placeholder="Type your City here!" name="q" value="Fredericton"/>
-                            <button class="px-4 rounded-md border-solid border-slate-500 border-2 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300" id="searchBtn">Search</button>
+                            <button class="text-white font-bold px-4 rounded-md border-solid border-slate-500 border-2 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300" id="searchBtn">Search</button>
 
                             <div class="NorthCard" id="NorthCard">
                                 <p>Weather Info</p>
@@ -72,7 +72,7 @@
     </main>
     <footer>
         <div class="footer" id="footer">
-            <h3>Thank you!</h3>
+            <h3>Copyright 2023 Group 1</h3>
         </div>
     </footer>
 
