synced changes to comparison city

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body class="min-h-screen font-['Space_Grotesk']">
     <header>
-        <div class="font-['MuseoModerno'] text-4xl text-center bg-slate-500/50 shadow-md" id="header">
+        <div class="font-['MuseoModerno'] my-4 p-4 text-4xl text-center bg-slate-500/50 shadow-md" id="header">
             <h1>Weather Comparison</h1>
             <h2 class="lead">Today:<br />
             <span id="time-display" class="lead"></span></h2>
@@ -58,11 +58,11 @@
 
                         </div>
                     
-                        <div class="SouthContainer" id="SouthContainer">
-                            <h2>Location 2</h2>
+                        <div class="p-4 bg-slate-500/50 rounded-md text-center shadow-md" id="SouthContainer">
+                            <h2 class="mb-4 text-2xl font-bold">Location 2</h2>
                             <label class="sr-only" for="city-search-south">City:</label>
-                            <input class="italic justify-self-center px-8 rounded-md border-solid border-slate-500 border-2 font-mono" type="search" id="city-search-south" name="sourth" />
-                            <button class="px-4 rounded-md border-solid border-slate-500 border-2 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300" id="southBtn" type="submit">Search</button>
+                            <input class="italic justify-self-center px-8 rounded-md border-solid border-slate-500 border-2 font-mono" type="search" id="city-search-south" placeholder="Type your City here!" name="sourth" />
+                            <button class="text-white font-bold px-4 rounded-md border-solid border-slate-500 border-2 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-indigo-500 duration-300" id="southBtn" type="submit">Search</button>
                             <div class="SouthCard" id="SouthCard">
                                 <p>Weather Info</p>
                             </div>
@@ -74,7 +74,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer" id="footer">
+        <div class="font-bold my-4 p-4 bg-slate-500/50 rounded-md text-center shadow-md" id="footer">
             <h3>Copyright 2023 Group 1</h3>
         </div>
     </footer>
